organização da estrutura

--- a/interacoes.html
+++ b/interacoes.html
@@ -9,6 +9,15 @@
     <title>Interações Whatsapp Omni</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="interactions">
+      <div class="left-sb">
+        <div class="settings"></div>
+        <div class="sidebar"></div>
+      </div>
+      <div class="content">
+        <div class="aside"></div>
+        <div class="aside"></div>
+      </div>
+    </div>
   </body>
 </html>
