--- a/interacoes.html
+++ b/interacoes.html
@@ -5,18 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
     <link rel="stylesheet" href="src/css/style.min.css" />
     <title>Interações Whatsapp Omni</title>
   </head>
   <body>
     <div id="interactions">
       <div class="left-sb">
-        <div class="settings"></div>
-        <div class="sidebar"></div>
-      </div>
-      <div class="content">
-        <div class="aside"></div>
-        <div class="aside"></div>
+        <div class="settings">
+          <ul>
+            <li class="active"><i class="fas fa-users"></i></li>
+            <li><i class="fas fa-comment-alt"></i></li>
+            <li><i class="fas fa-cog"></i></li>
+          </ul>
+        </div>
+        <div class="sidebar sb-default">
+          <div class="teto">
+            <h3 class="title">Interações em Atendimento</h3>
+            <div class="search">
+              <input type="text" placeholder="Pesquisar">
+            </div>
+          </div>
+          <ul>
+            <li class="new"></li>
+            <li class="cont"></li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
