sidebar contact data

--- a/interacoes.html
+++ b/interacoes.html
@@ -27,9 +27,267 @@
             </div>
           </div>
           <ul>
-            <li class="new"></li>
-            <li class="cont"></li>
+            <li class="new">
+              <span class="circle">
+                <i class="fas fa-edit"></i>
+              </span>
+              <div class="txt">Nova Conversa</div>
+            </li>
+            <li class="cont active">
+              <div class="row">
+                <div class="col-sm-2">
+                  <span class="circle inital">WO</span>
+                </div>
+                <div class="col-sm-10">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <h5 class="name">William Oliveira
+                        <span class="time">12:02</span>
+                      </h5>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="msg">Lorem Ipsumczx ir kļuvis par bba balb ldfsau gag ...</p>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="channel"><strong>Fila:</strong> Início 2  •  <strong>SLA:</strong> <span class="danger">00:12:58</span>  •  <strong>Canal:</strong> WebChat</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="cont">
+              <div class="row">
+                <div class="col-sm-2">
+                  <span class="circle inital">RA</span>
+                  <span class="notif">2</span>
+                </div>
+                <div class="col-sm-10">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <h5 class="name">Rachel Aniston
+                        <span class="time">12:02</span>
+                      </h5>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="msg">Lorem Ipsumczx ir kļuvis par bba balb ldfsau gag ...</p>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="channel"><strong>Fila:</strong> Início 2  •  <strong>SLA:</strong> <span class="danger">00:12:58</span>  •  <strong>Canal:</strong> WebChat</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="cont">
+              <div class="row">
+                <div class="col-sm-2">
+                  <span class="circle inital">RA</span>
+                  <span class="notif">2</span>
+                </div>
+                <div class="col-sm-10">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <h5 class="name">Rachel Aniston
+                        <span class="time">12:02</span>
+                      </h5>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="msg">Lorem Ipsumczx ir kļuvis par bba balb ldfsau gag ...</p>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="channel"><strong>Fila:</strong> Início 2  •  <strong>SLA:</strong> <span class="danger">00:12:58</span>  •  <strong>Canal:</strong> WebChat</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="cont">
+              <div class="row">
+                <div class="col-sm-2">
+                  <span class="circle inital">RA</span>
+                </div>
+                <div class="col-sm-10">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <h5 class="name">Rachel Aniston
+                        <span class="time">12:02</span>
+                      </h5>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="msg">Lorem Ipsumczx ir kļuvis par bba balb ldfsau gag ...</p>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="channel"><strong>Fila:</strong> Início 2  •  <strong>SLA:</strong> <span class="danger">00:12:58</span>  •  <strong>Canal:</strong> WebChat</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="cont">
+              <div class="row">
+                <div class="col-sm-2">
+                  <span class="circle inital">RA</span>
+                </div>
+                <div class="col-sm-10">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <h5 class="name">Rachel Aniston
+                        <span class="time">12:02</span>
+                      </h5>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="msg">Lorem Ipsumczx ir kļuvis par bba balb ldfsau gag ...</p>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="channel"><strong>Fila:</strong> Início 2  •  <strong>SLA:</strong> <span class="danger">00:12:58</span>  •  <strong>Canal:</strong> WebChat</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="cont">
+              <div class="row">
+                <div class="col-sm-2">
+                  <span class="circle inital">RA</span>
+                </div>
+                <div class="col-sm-10">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <h5 class="name">Rachel Aniston
+                        <span class="time">12:02</span>
+                      </h5>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="msg">Lorem Ipsumczx ir kļuvis par bba balb ldfsau gag ...</p>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="channel"><strong>Fila:</strong> Início 2  •  <strong>SLA:</strong> <span class="danger">00:12:58</span>  •  <strong>Canal:</strong> WebChat</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="cont">
+              <div class="row">
+                <div class="col-sm-2">
+                  <span class="circle inital">RA</span>
+                </div>
+                <div class="col-sm-10">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <h5 class="name">Rachel Aniston
+                        <span class="time">12:02</span>
+                      </h5>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="msg">Lorem Ipsumczx ir kļuvis par bba balb ldfsau gag ...</p>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="channel"><strong>Fila:</strong> Início 2  •  <strong>SLA:</strong> <span class="danger">00:12:58</span>  •  <strong>Canal:</strong> WebChat</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="cont">
+              <div class="row">
+                <div class="col-sm-2">
+                  <span class="circle inital">RA</span>
+                </div>
+                <div class="col-sm-10">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <h5 class="name">Rachel Aniston
+                        <span class="time">12:02</span>
+                      </h5>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="msg">Lorem Ipsumczx ir kļuvis par bba balb ldfsau gag ...</p>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="channel"><strong>Fila:</strong> Início 2  •  <strong>SLA:</strong> <span class="danger">00:12:58</span>  •  <strong>Canal:</strong> WebChat</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="cont">
+              <div class="row">
+                <div class="col-sm-2">
+                  <span class="circle inital">RA</span>
+                </div>
+                <div class="col-sm-10">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <h5 class="name">Rachel Aniston
+                        <span class="time">12:02</span>
+                      </h5>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="msg">Lorem Ipsumczx ir kļuvis par bba balb ldfsau gag ...</p>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="channel"><strong>Fila:</strong> Início 2  •  <strong>SLA:</strong> <span class="danger">00:12:58</span>  •  <strong>Canal:</strong> WebChat</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="cont">
+              <div class="row">
+                <div class="col-sm-2">
+                  <span class="circle inital">RA</span>
+                </div>
+                <div class="col-sm-10">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <h5 class="name">Rachel Aniston
+                        <span class="time">12:02</span>
+                      </h5>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="msg">Lorem Ipsumczx ir kļuvis par bba balb ldfsau gag ...</p>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="channel"><strong>Fila:</strong> Início 2  •  <strong>SLA:</strong> <span class="danger">00:12:58</span>  •  <strong>Canal:</strong> WebChat</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="cont">
+              <div class="row">
+                <div class="col-sm-2">
+                  <span class="circle inital">RA</span>
+                </div>
+                <div class="col-sm-10">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <h5 class="name">Rachel Aniston
+                        <span class="time">12:02</span>
+                      </h5>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="msg">Lorem Ipsumczx ir kļuvis par bba balb ldfsau gag ...</p>
+                    </div>
+                    <div class="col-sm-12">
+                      <p class="channel"><strong>Fila:</strong> Início 2  •  <strong>SLA:</strong> <span class="danger">00:12:58</span>  •  <strong>Canal:</strong> WebChat</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
           </ul>
+        </div>
+      </div>
+      <div class="content">
+        <div class="aside sb-default">
+          <div class="teto">
+            <h3 class="title">Interações em Atendimento</h3>
+            <div class="search">
+              <input type="text" placeholder="Pesquisar">
+            </div>
+          </div>
         </div>
       </div>
     </div>
