--- a/interacoes.html
+++ b/interacoes.html
@@ -282,15 +282,27 @@
         </div>
       </div>
       <div class="content">
-        <div class="aside sb-default">
-          <div class="teto">
-            <h3 class="title">William Oliveira</h3>
-            <div class="search">
-              <input type="text" placeholder="Pesquisar">
+          <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
+              </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+              <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">...1</div>
+              <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...2</div>
+              <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...3</div>
             </div>
-          </div>
-        </div>
+
+
+        
       </div>
     </div>
+    <script src="src/js/bootstrap.min.js"></script>
   </body>
 </html>
