--- a/interacoes.html
+++ b/interacoes.html
@@ -34,6 +34,10 @@
           </div>
           <div class="tab-content">
             <ul id="contact" class="tab-pane in active">
+                <div class="checkbox checkbox-primary">
+                    <input id="checkbox2" type="checkbox" checked="">
+                    <label for="checkbox2">Selecionar tudo</label>
+                </div>
               <li class="new">
                 <span class="circle">
                   <i class="fas fa-edit"></i>
