--- a/interacoes.html
+++ b/interacoes.html
@@ -34,22 +34,26 @@
           </div>
           <div class="tab-content">
             <ul id="contact" class="tab-pane in active">
-                <div class="checkbox checkbox-primary">
-                    <input id="checkbox2" type="checkbox" checked="">
-                    <label for="checkbox2">Selecionar tudo</label>
-                </div>
-              <li class="new">
+                <li class="newmsg">
                 <span class="circle">
                   <i class="fas fa-edit"></i>
                 </span>
                 <div class="txt">Nova Conversa</div>
+
+                <div class="checkbox checkbox-primary select-all">
+                        <input id="checkbox2" type="checkbox" checked="">
+                        <label for="checkbox2">Selecionar tudo</label>
+                    </div>
               </li>
               <li class="cont active">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <div class="col-sm-3">
+                    <div class="checkbox checkbox-primary check-user">
+                        <input id="checkbox2" type="checkbox" checked="">
+                    </div>
                     <span class="circle inital">WO</span>
                   </div>
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <div class="row">
                       <div class="col-sm-12">
                         <h5 class="name">William Oliveira
@@ -68,11 +72,15 @@
               </li>
               <li class="cont new">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <div class="col-sm-3">
+
+                    <div class="checkbox checkbox-primary check-user">
+                        <input id="checkbox2" type="checkbox" checked="">
+                    </div>
                     <span class="circle inital">RA</span>
                     <span class="notif">2</span>
                   </div>
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <div class="row">
                       <div class="col-sm-12">
                         <h5 class="name">Rachel Aniston
@@ -91,11 +99,15 @@
               </li>
               <li class="cont new">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <div class="col-sm-3">
+
+                    <div class="checkbox checkbox-primary check-user">
+                        <input id="checkbox2" type="checkbox" checked="">
+                    </div>
                     <span class="circle inital">RA</span>
                     <span class="notif">2</span>
                   </div>
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <div class="row">
                       <div class="col-sm-12">
                         <h5 class="name">Rachel Aniston
@@ -114,10 +126,14 @@
               </li>
               <li class="cont">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <div class="col-sm-3">
+
+                    <div class="checkbox checkbox-primary check-user">
+                        <input id="checkbox2" type="checkbox" checked="">
+                    </div>
                     <span class="circle inital">RA</span>
                   </div>
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <div class="row">
                       <div class="col-sm-12">
                         <h5 class="name">Rachel Aniston
@@ -136,10 +152,14 @@
               </li>
               <li class="cont">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <div class="col-sm-3">
+
+                    <div class="checkbox checkbox-primary check-user">
+                        <input id="checkbox2" type="checkbox" checked="">
+                    </div>
                     <span class="circle inital">RA</span>
                   </div>
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <div class="row">
                       <div class="col-sm-12">
                         <h5 class="name">Rachel Aniston
@@ -158,10 +178,14 @@
               </li>
               <li class="cont">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <div class="col-sm-3">
+
+                    <div class="checkbox checkbox-primary check-user">
+                        <input id="checkbox2" type="checkbox" checked="">
+                    </div>
                     <span class="circle inital">RA</span>
                   </div>
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <div class="row">
                       <div class="col-sm-12">
                         <h5 class="name">Rachel Aniston
@@ -180,10 +204,14 @@
               </li>
               <li class="cont">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <div class="col-sm-3">
+
+                    <div class="checkbox checkbox-primary check-user">
+                        <input id="checkbox2" type="checkbox" checked="">
+                    </div>
                     <span class="circle inital">RA</span>
                   </div>
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <div class="row">
                       <div class="col-sm-12">
                         <h5 class="name">Rachel Aniston
@@ -202,10 +230,14 @@
               </li>
               <li class="cont">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <div class="col-sm-3">
+
+                    <div class="checkbox checkbox-primary check-user">
+                        <input id="checkbox2" type="checkbox" checked="">
+                    </div>
                     <span class="circle inital">RA</span>
                   </div>
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <div class="row">
                       <div class="col-sm-12">
                         <h5 class="name">Rachel Aniston
@@ -224,10 +256,14 @@
               </li>
               <li class="cont">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <div class="col-sm-3">
+
+                    <div class="checkbox checkbox-primary check-user">
+                        <input id="checkbox2" type="checkbox" checked="">
+                    </div>
                     <span class="circle inital">RA</span>
                   </div>
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <div class="row">
                       <div class="col-sm-12">
                         <h5 class="name">Rachel Aniston
@@ -246,10 +282,14 @@
               </li>
               <li class="cont">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <div class="col-sm-3">
+
+                    <div class="checkbox checkbox-primary check-user">
+                        <input id="checkbox2" type="checkbox" checked="">
+                    </div>
                     <span class="circle inital">RA</span>
                   </div>
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <div class="row">
                       <div class="col-sm-12">
                         <h5 class="name">Rachel Aniston
@@ -268,10 +308,14 @@
               </li>
               <li class="cont">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <div class="col-sm-3">
+
+                    <div class="checkbox checkbox-primary check-user">
+                        <input id="checkbox2" type="checkbox" checked="">
+                    </div>
                     <span class="circle inital">RA</span>
                   </div>
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <div class="row">
                       <div class="col-sm-12">
                         <h5 class="name">Rachel Aniston
@@ -290,10 +334,14 @@
               </li>
               <li class="cont">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <div class="col-sm-3">
+
+                    <div class="checkbox checkbox-primary check-user">
+                        <input id="checkbox2" type="checkbox" checked="">
+                    </div>
                     <span class="circle inital">RA</span>
                   </div>
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <div class="row">
                       <div class="col-sm-12">
                         <h5 class="name">Rachel Aniston
@@ -312,10 +360,14 @@
               </li>
               <li class="cont">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <div class="col-sm-3">
+
+                    <div class="checkbox checkbox-primary check-user">
+                        <input id="checkbox2" type="checkbox" checked="">
+                    </div>
                     <span class="circle inital">RA</span>
                   </div>
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <div class="row">
                       <div class="col-sm-12">
                         <h5 class="name">Rachel Aniston
@@ -334,18 +386,28 @@
               </li>
             </ul>
             <ul id="group" class="tab-pane">
-              <li class="new">
-                <span class="circle">
-                  <i class="fas fa-user-plus"></i>
-                </span>
-                <div class="txt">Novo Grupo</div>
-              </li>
+
+              <li class="newmsg">
+                    <span class="circle">
+                            <i class="fas fa-user-plus"></i>
+                    </span>
+                    <div class="txt">Novo Grupo</div>
+    
+                    <div class="checkbox checkbox-primary select-all">
+                            <input id="checkbox2" type="checkbox" checked="">
+                            <label for="checkbox2">Selecionar tudo</label>
+                        </div>
+                  </li>
               <li class="cont active">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <div class="col-sm-3">
+
+                    <div class="checkbox checkbox-primary check-user">
+                        <input id="checkbox2" type="checkbox" checked="">
+                    </div>
                     <span class="circle inital">GP</span>
                   </div>
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <div class="row">
                       <div class="col-sm-12">
                         <h5 class="name">Grupo Plusoft
@@ -364,10 +426,14 @@
               </li>
               <li class="cont">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <div class="col-sm-3">
+
+                    <div class="checkbox checkbox-primary check-user">
+                        <input id="checkbox2" type="checkbox" checked="">
+                    </div>
                     <span class="circle inital">IC</span>
                   </div>
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <div class="row">
                       <div class="col-sm-12">
                         <h5 class="name">Informativo aos Clientes
@@ -386,10 +452,14 @@
               </li>
               <li class="cont">
                 <div class="row">
-                  <div class="col-sm-2">
+                  <div class="col-sm-3">
+
+                    <div class="checkbox checkbox-primary check-user">
+                        <input id="checkbox2" type="checkbox" checked="">
+                    </div>
                     <span class="circle inital">AS</span>
                   </div>
-                  <div class="col-sm-10">
+                  <div class="col-sm-9">
                     <div class="row">
                       <div class="col-sm-12">
                         <h5 class="name">Avisos SMS
