funcionalidade de favoritos

--- a/interacoes.html
+++ b/interacoes.html
@@ -58,7 +58,9 @@
                                 <div class="col-sm-9">
                                     <div class="row">
                                         <div class="col-sm-12">
-                                            <h5 class="name">William Oliveira
+                                            <h5 class="name">
+                                                <i class="favorite fas fa-star"></i>
+                                                William Oliveira
                                                 <span class="time">12:02</span>
                                             </h5>
                                         </div>
@@ -85,7 +87,9 @@
                                 <div class="col-sm-9">
                                     <div class="row">
                                         <div class="col-sm-12">
-                                            <h5 class="name">Rachel Aniston
+                                            <h5 class="name">
+                                                <i class="favorite fas fa-star"></i>
+                                                Rachel Aniston
                                                 <span class="time">12:02</span>
                                             </h5>
                                         </div>
@@ -164,7 +168,9 @@
                                 <div class="col-sm-9">
                                     <div class="row">
                                         <div class="col-sm-12">
-                                            <h5 class="name">Rachel Aniston
+                                            <h5 class="name">
+                                                <i class="favorite fas fa-star"></i>
+                                                Rachel Aniston
                                                 <span class="time">12:02</span>
                                             </h5>
                                         </div>
@@ -482,6 +488,11 @@
             </div>
         </div>
         <div class="content">
+            <div class="row">
+                <div class="area-msg col-sm-6">a</div>
+                <div class="col-sm-3">s</div>
+                <div class="col-sm-3">f</div>
+            </div>
         </div>
     </div>
 </body>
