--- a/interacoes.html
+++ b/interacoes.html
@@ -489,9 +489,14 @@
         </div>
         <div class="content">
             <div class="row">
-                <div class="area-msg col-sm-6">a</div>
-                <div class="col-sm-3">s</div>
-                <div class="col-sm-3">f</div>
+                <div class="col-area area-msg col-sm-6">
+                    <div class="hd">
+                        <h5 class="contact-data"><i class="favorite fas fa-star"></i> William Oliveira<span>11 99105 4384</span><span>ID: 13214</span></h5>
+                        
+                    </div>
+                </div>
+                <div class="col-area col-sm-3">s</div>
+                <div class="col-area col-sm-3">f</div>
             </div>
         </div>
     </div>
