Insert buttons in tools

--- a/interacoes.html
+++ b/interacoes.html
@@ -5,10 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
-        crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese"
-        rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
     <link rel="stylesheet" href="src/css/style.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -489,13 +487,22 @@
         </div>
         <div class="content">
             <div class="row">
-                <div class="col-area area-msg col-sm-6">
+                <div class="col-area area-msg col-sm-9">
                     <div class="hd">
                         <h5 class="contact-data"><i class="favorite fas fa-star"></i> William Oliveira<span>11 99105 4384</span><span>ID: 13214</span></h5>
-                        
+                        <ul class="nav-icon">
+                            <li><a href=""><i class="fas fa-search"></i></a></li>
+                            <li><a href=""><i class="fas fa-brain"></i></a></li>
+                            <li><a href=""><i class="fas fa-info-circle"></i></a></li>
+                        </ul>
                     </div>
+                    <div class="tools">
+                        <button type="button" class="btn btn-sm btn-success">Atendimento</button>
+                        <button type="button" class="btn btn-sm btn-danger">Encerrar</button>
+                        <button type="button" class="btn btn-sm btn-default">Transferir</button>
+                        <button type="button" class="btn btn-sm btn-default">Conferência</button>
+                    </div>    
                 </div>
-                <div class="col-area col-sm-3">s</div>
                 <div class="col-area col-sm-3">f</div>
             </div>
         </div>
