Inclusõa do rodapé da mensagem

--- a/interacoes.html
+++ b/interacoes.html
@@ -501,7 +501,46 @@
                         <button type="button" class="btn btn-sm btn-danger">Encerrar</button>
                         <button type="button" class="btn btn-sm btn-default">Transferir</button>
                         <button type="button" class="btn btn-sm btn-default">Conferência</button>
-                    </div>    
+                        <ul class="list-info">
+                            <li>
+                                <label class="tlts">Acesso</label>
+                                <label class="info">08:08:08</label>
+                            </li>
+                            <li>
+                                <label class="tlts">Atendido</label>
+                                <label class="info">08:08:08</label>
+                            </li>
+                            <li>
+                                <label class="tlts">Espera</label>
+                                <label class="info">08:08:08</label>
+                            </li>
+                            <li>
+                                <label class="tlts">Sessão</label>
+                                <label class="info danger">08:08:08</label>
+                            </li>
+                            <li>
+                                <label class="tlts">SLA</label>
+                                <label class="info">08:08:08</label>
+                            </li>
+                            <li>
+                                <label class="tlts">Fila</label>
+                                <label class="info">Início 2</label>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="main-msg"></div>
+                    <div class="toolsbar-msg">
+                        <div class="textbox">
+                            <textarea class="send-new-msg" placeholder="Digite uma mensagem"></textarea>
+                            <button class="send"><i class="fas fa-share-square"></i></button>
+                        </div>
+                        <ul class="icon-action">
+                            <li><a href=""><i class="fas fa-microphone"></i></a></li>
+                            <li><a href=""><i class="far fa-grin-beam"></i></a></li>
+                            <li><a href=""><i class="fas fa-paperclip"></i></a></li>
+                            <li><a href=""><i class="fas fa-user-plus"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="col-area col-sm-3">f</div>
             </div>
