--- a/interacoes.html
+++ b/interacoes.html
@@ -487,7 +487,7 @@
         </div>
         <div class="content">
             <div class="row">
-                <div class="col-area area-msg col-sm-9">
+                <div class="col-area area-msg col-sm-12">
                     <div class="hd">
                         <h5 class="contact-data"><i class="favorite fas fa-star"></i> William Oliveira<span>11 99105 4384</span><span>ID: 13214</span></h5>
                         <ul class="nav-icon">
@@ -528,7 +528,33 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="main-msg"></div>
+                    <div class="main-msg">
+
+                        <div class="msg-info">
+                            <div class="box-msg msg-client">
+                                <p>Lorem Ipsum</p>
+                            </div>
+                        </div>
+
+                        <div class="msg-info">
+                            <div class="box-msg msg-client">
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
+                            </div>
+                        </div>
+
+                        <div class="msg-info">
+                            <div class="box-msg msg-operator">
+                                <p>Lorem Ipsum</p>
+                            </div>
+                        </div>
+
+                        <div class="msg-info">
+                            <div class="box-msg msg-operator">
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                            </div>
+                        </div>
+
+                    </div>
                     <div class="toolsbar-msg">
                         <div class="textbox">
                             <textarea class="send-new-msg" placeholder="Digite uma mensagem"></textarea>
