--- a/interacoes.html
+++ b/interacoes.html
@@ -530,6 +530,8 @@
                     </div>
                     <div class="main-msg">
 
+                        <div class="date-msg">Hoje</div>
+
                         <div class="msg-info">
                             <div class="box-msg msg-client">
                                 <p>Lorem Ipsum</p>
