overflow area de msg

--- a/interacoes.html
+++ b/interacoes.html
@@ -529,33 +529,44 @@
                         </ul>
                     </div>
                     <div class="main-msg">
+                        <div class="ct-msg">
 
-                        <div class="date-msg">Hoje</div>
+                            <div class="date-msg">Hoje</div>
 
-                        <div class="msg-info">
-                            <div class="box-msg msg-client">
-                                <p>Lorem Ipsum</p>
+                            <div class="msg-info">
+                                <div class="box-msg msg-client">
+                                    <p>Lorem Ipsum</p>
+                                    <span class="time-msg">11:37</span>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="msg-info">
-                            <div class="box-msg msg-client">
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
+                            <div class="msg-info">
+                                <div class="box-msg msg-client">
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
+                                    <span class="time-msg">11:37</span>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="msg-info">
-                            <div class="box-msg msg-operator">
-                                <p>Lorem Ipsum</p>
+                            <div class="msg-info">
+                                <div class="box-msg msg-operator">
+                                    <p>Lorem Ipsum</p>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="msg-info">
-                            <div class="box-msg msg-operator">
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                            <div class="msg-info">
+                                <div class="box-msg msg-operator">
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                                </div>
                             </div>
-                        </div>
 
+                            <div class="msg-info">
+                                <div class="box-msg msg-client">
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                                    <span class="time-msg">11:37</span>
+                                </div>
+                            </div>
+                            
+                        </div>
                     </div>
                     <div class="toolsbar-msg">
                         <div class="textbox">
