--- a/interacoes.html
+++ b/interacoes.html
@@ -537,6 +537,9 @@
                                 <div class="box-msg msg-client">
                                     <p>Lorem Ipsum</p>
                                     <span class="time-msg">11:37</span>
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -565,7 +568,7 @@
                                     <span class="time-msg">11:37</span>
                                 </div>
                             </div>
-                            
+
                         </div>
                     </div>
                     <div class="toolsbar-msg">
