--- a/interacoes.html
+++ b/interacoes.html
@@ -537,8 +537,10 @@
                                 <div class="box-msg msg-client">
                                     <p>Lorem Ipsum</p>
                                     <span class="time-msg">11:37</span>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-pl answered">
+                                        <div class="progress-pl-bar" style="width: 25%">
+                                            <div class="timer-prgress">00:58</div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -547,6 +549,11 @@
                                 <div class="box-msg msg-client">
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
                                     <span class="time-msg">11:37</span>
+                                    <div class="progress-pl ">
+                                        <div class="progress-pl-bar" style="width: 50%">
+                                            <div class="timer-prgress">00:58</div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -566,6 +573,29 @@
                                 <div class="box-msg msg-client">
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
                                     <span class="time-msg">11:37</span>
+                                    <div class="progress-pl answered">
+                                        <div class="progress-pl-bar" style="width: 25%">
+                                            <div class="timer-prgress">00:58</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="msg-info">
+                                <div class="box-msg msg-operator">
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                                </div>
+                            </div>
+                            
+                            <div class="msg-info">
+                                <div class="box-msg msg-client">
+                                    <p>Lorem Ipsum</p>
+                                    <span class="time-msg">11:37</span>
+                                    <div class="progress-pl answered">
+                                        <div class="progress-pl-bar" style="width: 25%">
+                                            <div class="timer-prgress">00:58</div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
