--- a/interacoes.html
+++ b/interacoes.html
@@ -487,7 +487,7 @@
         </div>
         <div class="content">
             <div class="row">
-                <div class="col-area area-msg col-sm-12">
+                <div class="col-area area-msg col-sm-9">
                     <div class="hd">
                         <h5 class="contact-data"><i class="favorite fas fa-star"></i> William Oliveira<span>11 99105 4384</span><span>ID: 13214</span></h5>
                         <ul class="nav-icon">
@@ -538,7 +538,7 @@
                                     <p>Lorem Ipsum</p>
                                     <span class="time-msg">11:37</span>
                                     <div class="progress-pl answered">
-                                        <div class="progress-pl-bar" style="width: 25%">
+                                        <div class="progress-pl-bar" style="width: 100%">
                                             <div class="timer-prgress">00:58</div>
                                         </div>
                                     </div>
@@ -549,7 +549,7 @@
                                 <div class="box-msg msg-client">
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
                                     <span class="time-msg">11:37</span>
-                                    <div class="progress-pl ">
+                                    <div class="progress-pl">
                                         <div class="progress-pl-bar" style="width: 50%">
                                             <div class="timer-prgress">00:58</div>
                                         </div>
@@ -560,12 +560,14 @@
                             <div class="msg-info">
                                 <div class="box-msg msg-operator">
                                     <p>Lorem Ipsum</p>
+                                    <span class="time-msg sent">11:37</span>
                                 </div>
                             </div>
 
                             <div class="msg-info">
                                 <div class="box-msg msg-operator">
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                                    <span class="time-msg received">11:37</span>
                                 </div>
                             </div>
 
@@ -584,15 +586,16 @@
                             <div class="msg-info">
                                 <div class="box-msg msg-operator">
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                                    <span class="time-msg visualized">11:37</span>
                                 </div>
                             </div>
-                            
+
                             <div class="msg-info">
                                 <div class="box-msg msg-client">
                                     <p>Lorem Ipsum</p>
                                     <span class="time-msg">11:37</span>
-                                    <div class="progress-pl answered">
-                                        <div class="progress-pl-bar" style="width: 25%">
+                                    <div class="progress-pl">
+                                        <div class="progress-pl-bar" style="width: 35%">
                                             <div class="timer-prgress">00:58</div>
                                         </div>
                                     </div>
