--- a/interacoes.html
+++ b/interacoes.html
@@ -537,6 +537,7 @@
                                 <div class="box-msg msg-client">
                                     <p>Lorem Ipsum</p>
                                     <span class="time-msg">11:37</span>
+                                    <button class="drop-action"><i class="fas fa-chevron-down"></i></button>
                                     <div class="progress-pl answered">
                                         <div class="progress-pl-bar" style="width: 100%">
                                             <div class="timer-prgress">00:58</div>
@@ -554,6 +555,13 @@
                                             <div class="timer-prgress">00:58</div>
                                         </div>
                                     </div>
+                                </div>
+                            </div>
+
+                            <div class="msg-info">
+                                <div class="box-msg msg-operator">
+                                    <p>Lorem Ipsum</p>
+                                    <span class="time-msg sent">11:37</span>
                                 </div>
                             </div>
 
