--- a/interacoes.html
+++ b/interacoes.html
@@ -537,7 +537,15 @@
                                 <div class="box-msg msg-client">
                                     <p>Lorem Ipsum</p>
                                     <span class="time-msg">11:37</span>
-                                    <button class="drop-action"><i class="fas fa-chevron-down"></i></button>
+                                    <button class="drop-action dp-active"><i class="fas fa-chevron-down"></i></button>
+                                    <ul class="toggle-action active-tg">
+                                        <li><a href="">Responder</a></li>
+                                        <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                        <li><a href="">Marcar mensagem</a></li>
+                                        <li><a href="">Apagar mensagem</a></li>
+                                        <li><a href="">Classificar mensagem</a></li>
+                                        <li><a href="">Detalhes da mensagem</a></li>
+                                    </ul>
                                     <div class="progress-pl answered">
                                         <div class="progress-pl-bar" style="width: 100%">
                                             <div class="timer-prgress">00:58</div>
@@ -550,6 +558,15 @@
                                 <div class="box-msg msg-client">
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
                                     <span class="time-msg">11:37</span>
+                                    <button class="drop-action"><i class="fas fa-chevron-down"></i></button>
+                                    <ul class="toggle-action">
+                                        <li><a href="">Responder</a></li>
+                                        <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                        <li><a href="">Marcar mensagem</a></li>
+                                        <li><a href="">Apagar mensagem</a></li>
+                                        <li><a href="">Classificar mensagem</a></li>
+                                        <li><a href="">Detalhes da mensagem</a></li>
+                                    </ul>
                                     <div class="progress-pl">
                                         <div class="progress-pl-bar" style="width: 50%">
                                             <div class="timer-prgress">00:58</div>
@@ -583,6 +600,15 @@
                                 <div class="box-msg msg-client">
                                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
                                     <span class="time-msg">11:37</span>
+                                    <button class="drop-action"><i class="fas fa-chevron-down"></i></button>
+                                    <ul class="toggle-action">
+                                        <li><a href="">Responder</a></li>
+                                        <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                        <li><a href="">Marcar mensagem</a></li>
+                                        <li><a href="">Apagar mensagem</a></li>
+                                        <li><a href="">Classificar mensagem</a></li>
+                                        <li><a href="">Detalhes da mensagem</a></li>
+                                    </ul>
                                     <div class="progress-pl answered">
                                         <div class="progress-pl-bar" style="width: 25%">
                                             <div class="timer-prgress">00:58</div>
@@ -602,6 +628,15 @@
                                 <div class="box-msg msg-client">
                                     <p>Lorem Ipsum</p>
                                     <span class="time-msg">11:37</span>
+                                    <button class="drop-action"><i class="fas fa-chevron-down"></i></button>
+                                    <ul class="toggle-action">
+                                        <li><a href="">Responder</a></li>
+                                        <li class="active"><a href="">Encaminhar mensagem</a></li>
+                                        <li><a href="">Marcar mensagem</a></li>
+                                        <li><a href="">Apagar mensagem</a></li>
+                                        <li><a href="">Classificar mensagem</a></li>
+                                        <li><a href="">Detalhes da mensagem</a></li>
+                                    </ul>
                                     <div class="progress-pl">
                                         <div class="progress-pl-bar" style="width: 35%">
                                             <div class="timer-prgress">00:58</div>
