--- a/interacoes.html
+++ b/interacoes.html
@@ -645,6 +645,13 @@
                                 </div>
                             </div>
 
+                            <div class="msg-info">
+                                <div class="box-msg msg-operator">
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+                                    <span class="time-msg visualized">11:37</span>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                     <div class="toolsbar-msg">
