ajuste no tamanho do centro

--- a/interacoes.html
+++ b/interacoes.html
@@ -487,7 +487,7 @@
         </div>
         <div class="content">
             <div class="row">
-                <div class="col-area area-msg col-sm-9">
+                <div class="col-area area-msg division-3">
                     <div class="hd">
                         <h5 class="contact-data"><i class="favorite fas fa-star"></i> William Oliveira<span>11 99105 4384</span><span>ID: 13214</span></h5>
                         <ul class="nav-icon">
