--- a/interacoes.html
+++ b/interacoes.html
@@ -667,7 +667,48 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-area col-sm-3">f</div>
+                <div class="col-area area-add-right">
+                    <div class="hdr">
+                        <p>William Oliveira</p>
+                    </div>
+                    <div class="info-boxes">
+                        <div class="ib-gp">
+                            <h4>Descrição</h4>
+                            <p><strong>Nome:</strong>William Oliveira</p>
+                            <p><strong>Telefone:</strong>+55 11 99105 4384</p>
+                            <p><strong>Favorito:</strong><i class="favorite fas fa-star"></i></p>
+                        </div>
+                        <div class="ib-gp">
+                            <h4>Grupos Adicionados</h4>
+                            <ul class="list-group-contact">
+                                <li class="newmsg">
+                                    <div class="box">
+                                        <span class="circle">WO</span>
+                                        <span class="circle">RO</span>
+                                        <span class="circle">JR</span>
+                                        <span class="circle number">8</span>
+                                    </div>
+                                    <p class="txt">
+                                        <strong>OMNI Informa</strong>
+                                        <span>Henrique Pinheiro, João Paulo, Arnaldo Cezar Coelho, Fulnao de Tal</span>
+                                    </p>
+                                </li>
+                                <li class="newmsg">
+                                    <div class="box">
+                                        <span class="circle">WO</span>
+                                        <span class="circle">RO</span>
+                                        <span class="circle">JR</span>
+                                        <span class="circle number">2</span>
+                                    </div>
+                                    <p class="txt">
+                                        <strong>Status do Atendimento</strong>
+                                        <span>Henrique Pinheiro, João Paulo, Arnaldo Cezar Coelho, Fulnao de Tal</span>
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
