Ajuste de 4 colunas

--- a/interacoes.html
+++ b/interacoes.html
@@ -487,7 +487,7 @@
         </div>
         <div class="content">
             <div class="row">
-                <div class="col-area area-msg division-3">
+                <div class="col-area area-msg division-4">
                     <div class="hd">
                         <h5 class="contact-data"><i class="favorite fas fa-star"></i> William Oliveira<span>11 99105 4384</span><span>ID: 13214</span></h5>
                         <ul class="nav-icon">
@@ -665,6 +665,48 @@
                             <li><a href=""><i class="fas fa-paperclip"></i></a></li>
                             <li><a href=""><i class="fas fa-user-plus"></i></a></li>
                         </ul>
+                    </div>
+                </div>
+                <div class="col-area area-add-right">
+                    <div class="hdr">
+                        <p>William Oliveira</p>
+                    </div>
+                    <div class="info-boxes">
+                        <div class="ib-gp">
+                            <h4>Descrição</h4>
+                            <p><strong>Nome:</strong>William Oliveira</p>
+                            <p><strong>Telefone:</strong>+55 11 99105 4384</p>
+                            <p><strong>Favorito:</strong><i class="favorite fas fa-star"></i></p>
+                        </div>
+                        <div class="ib-gp">
+                            <h4>Grupos Adicionados</h4>
+                            <ul class="list-group-contact">
+                                <li class="newmsg">
+                                    <div class="box">
+                                        <span class="circle">WO</span>
+                                        <span class="circle">RO</span>
+                                        <span class="circle">JR</span>
+                                        <span class="circle number">8</span>
+                                    </div>
+                                    <p class="txt">
+                                        <strong>OMNI Informa</strong>
+                                        <span>Henrique Pinheiro, João Paulo, Arnaldo Cezar Coelho, Fulnao de Tal</span>
+                                    </p>
+                                </li>
+                                <li class="newmsg">
+                                    <div class="box">
+                                        <span class="circle">WO</span>
+                                        <span class="circle">RO</span>
+                                        <span class="circle">JR</span>
+                                        <span class="circle number">2</span>
+                                    </div>
+                                    <p class="txt">
+                                        <strong>Status do Atendimento</strong>
+                                        <span>Henrique Pinheiro, João Paulo, Arnaldo Cezar Coelho, Fulnao de Tal</span>
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="col-area area-add-right">
