Dropdown btn actions operador

--- a/interacoes.html
+++ b/interacoes.html
@@ -497,10 +497,20 @@
                         </ul>
                     </div>
                     <div class="tools">
-                        <button type="button" class="btn btn-sm btn-success">Atendimento</button>
-                        <button type="button" class="btn btn-sm btn-danger">Encerrar</button>
-                        <button type="button" class="btn btn-sm btn-default">Transferir</button>
-                        <button type="button" class="btn btn-sm btn-default">Conferência</button>
+                        <div class="btn-group-action">
+                            <button type="button" class="btn-full btn btn-sm btn-success">Atendimento</button>
+                            <button type="button" class="btn-full btn btn-sm btn-danger">Encerrar</button>
+                            <button type="button" class="btn-full btn btn-sm btn-default">Transferir</button>
+                            <button type="button" class="btn-full btn btn-sm btn-default">Conferência</button>
+
+                            <button type="button" class="btn btn-sm btn-small"><i class="fas fa-chevron-down"></i></button>
+                            <ul class="toggle-action">
+                                <li><a href="">Atendimento</a></li>
+                                <li class="active"><a href="">Encerrar</a></li>
+                                <li><a href="">Transferir</a></li>
+                                <li><a href="">Conferência</a></li>
+                            </ul>
+                        </div>
                         <ul class="list-info">
                             <li>
                                 <label class="tlts">Acesso</label>
